added group & password requirements for jenkins
Added requirements and examples for Jenkins pipelines.

--- a/detail_guides/4.2-add_jenkins_pipelines.md
+++ b/detail_guides/4.2-add_jenkins_pipelines.md
@@ -38,8 +38,17 @@
         - [ ] Trigger builds remotely (e.g., from scripts)
 
 - In the pipeline section, add the relevant pipelines
-- You can find some examples here:
+
+# You can find some examples here:
 - [scripts/step_5/pipelines](../scripts/step_5/pipelines)
+
+## Jenkins requires a few things to be able to run the example scripts:
+- [Nextcloud_update.groovy](scripts/step_5/Nextcloud_update.groovy) and [retrigger_cron_php.groovy](scripts/step_5/retrigger_cron_php.groovy) requires Jenkins to have the group docker
+- [update_server.groovy](scripts/step_5/update_server.groovy) requires Jenkins to have the group sudo
+- `sudo usermod -aG sudo,docker jenkins`
+- [update_server.groovy](scripts/step_5/update_server.groovy) requires Jenkins to have a password 
+- `sudo passwd jenkins`
+- for pipeline specific settings read the comments
 
 # Schedule
 
